tests/negative/gold/parser_test.gold
tests/negative/parser_test.toit:5:3: error: Field 'field1' must be initialized in a constructor
  field1/string
  ^~~~~~
EXCEPTION error. 
fail here
  0: main                      tests/negative/parser_test.toit:11:3
  1: __entry__.<lambda>        <sdk>/core/entry.toit:48:20


